Usage of multiple Redis servers for matrix storage
o Matrices can be distributed to several redis instances
o One redis instance acts as master which holds management info, others
are slaves and only store matrix blocks

--- a/tests/config.cfg
+++ b/tests/config.cfg
@@ -12,6 +12,7 @@
     },
     "redis_slaves" :
     {
-        "master"  : { "host" : "localhost", "port" : 6379, "db" : 0 }
+        "slave1"  : { "host" : "localhost", "port" : 6379, "db" : 1 },
+        "slave2"  : { "host" : "localhost", "port" : 6379, "db" : 2 }
     }
 }
