Context object for passing information to jobs
o A context object consolidates the redis connection, the key manager
and various configuration values to be passed easily from server to
matrix and from matrix to jobs

--- a/samples/config.cfg
+++ b/samples/config.cfg
@@ -1,8 +1,13 @@
 {
     "server_name" : "sample_server",
+    "jobs" :
+    {
+        "max_execs" : 3,
+        "timeout"   : 10
+    },
     "matrix" :
     {
-        "block_size"  : 128
+        "block_size"  : 256
     },
     "redis_master" :
     {
