--- a/tests/config.cfg
+++ b/tests/config.cfg
@@ -1,5 +1,10 @@
 {
     "server_name" : "sample_server",
+    "jobs" :
+    {
+        "max_execs" : 3,
+        "timeout"   : 10
+    },
     "matrix" :
     {
         "block_size"  : 256
@@ -12,7 +17,6 @@
     },
     "redis_slaves" :
     {
-        "slave1"  : { "host" : "localhost", "port" : 6379, "db" : 1 },
-        "slave2"  : { "host" : "localhost", "port" : 6379, "db" : 2 }
+        "master"  : { "host" : "localhost", "port" : 6379, "db" : 0 }
     }
 }
