--- a/samples/config.cfg
+++ b/samples/config.cfg
@@ -17,6 +17,7 @@
     },
     "redis_slaves" :
     {
-        "master"  : { "host" : "localhost", "port" : 6379, "db" : 0 }
+        "slave1"  : { "host" : "localhost", "port" : 6379, "db" : 1 },
+        "slave2"  : { "host" : "localhost", "port" : 6379, "db" : 2 }
     }
 }
